Update CSS to stop text being cut off

--- a/web-src/k2.css
+++ b/web-src/k2.css
@@ -142,7 +142,7 @@ ul.creditlist {
   
   .panel {
     font-size: inherit;
-    padding: 0 1em;
+    padding: 0 1em 1em 1em;
     background-color: white;
     max-height: 0;
     overflow: hidden;
